--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,6 +1,9 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+
 $primary: #ffe5d9;
 
 body {
     background-color: $primary;
+    font-family: "Lora", serif;
 }
