--- a/frontend/src/styles/prevquotes.scss
+++ b/frontend/src/styles/prevquotes.scss
@@ -4,3 +4,45 @@
     padding-top: 2rem;
     justify-content: center;
 }
+
+/* Style the select box */
+#view-quote-menu {
+    padding: 8px 12px;
+    font-size: 1rem;
+    border: 2px solid #ccc;
+    border-radius: 6px;
+    background-color: white;
+    cursor: pointer;
+    // appearance: none; /* Removes default styles in some browsers */
+    width: 200px;
+  }
+  
+  /* Add an arrow icon */
+//   #view-quote-menu {
+//     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="black"><path d="M7 10l5 5 5-5z"/></svg>');
+//     background-repeat: no-repeat;
+//     background-position: right 10px center;
+//     background-size: 12px;
+//     padding-right: 30px;
+//   }
+  
+  /* Style the dropdown options */
+  #view-quote-menu option {
+    font-size: 1rem;
+    background: white;
+    color: black;
+    padding: 10px;
+  }
+  
+  /* Style when the dropdown is hovered */
+  #view-quote-menu:hover {
+    border-color: #666;
+  }
+  
+  /* Style when the dropdown is focused */
+  #view-quote-menu:focus {
+    outline: none;
+    border-color: #007bff;
+    box-shadow: 0px 0px 5px rgba(0, 123, 255, 0.5);
+  }
+  
